# PyMixEF

./: .coverage 2  .coverage 3  .gitignore  .readthedocs.yaml  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  wheels.yml
benchmarks/: b01_sleepstudy.json  run.py
docs/: conf.py  developer.md  index.md  publishing.md  validation.md  warnings.md
docs/_static/brand/: README.md
docs/_static/css/: pymixef.css
docs/_static/js/: search-highlight.js  ux.js
docs/_static/tutorials/: manifest.json
docs/_templates/: copyright.html
docs/api/: aliases.md  index.md
docs/concepts/: conventions.md  model-ir.md
docs/development/: architecture.md  documentation.md  index.md
docs/getting-started/: choose-analysis.md  core-workflow.md  index.md  installation.md  quickstart.md
docs/interoperability/: index.md
docs/methods/: glmm.md  index.md  lmm.md  mmrm.md
docs/migration/: interoperability.md
docs/pharmacometrics/: authoring.md  events-and-ode.md  index.md  pk-models.md  population-estimation.md
docs/reference/: analysis-matrix.md  capability-catalog.md  cli.md  glossary.md  index.md
docs/trust/: index.md
docs/tutorials/: 01-catalyst-screening-lmm.md  02-binary-catalyst-success-glmm.md  03-catalyst-deactivation-mmrm.md  04-multicenter-biomarker-lmm.md  05-clinical-trial-mmrm.md  06-binary-response-glmm.md  07-pharmacometrics-event-semantics.md  08-closed-form-pk-and-ode.md  09-pharmacometrics-dsl-and-model-ir.md  10-diagnostics-simulation-validation-interop-archives.md  index.md
docs/user-guide/: covariance-and-random-effects.md  data-and-formulas.md  diagnostics-simulation.md  families-and-links.md  fitting-and-convergence.md  index.md  inference-and-comparison.md  results-provenance.md
examples/: lmm.py
examples/notebooks/: 01_catalyst_screening_lmm.ipynb  02_binary_catalyst_success_glmm.ipynb  03_catalyst_deactivation_mmrm.ipynb  04_multicenter_biomarker_lmm.ipynb  05_clinical_trial_mmrm.ipynb  06_binary_response_glmm.ipynb  07_pharmacometrics_event_semantics.ipynb  08_closed_form_pk_and_ode.ipynb  09_pharmacometrics_dsl_and_model_ir.ipynb  10_diagnostics_simulation_validation_interop_archives.ipynb  README.md
native/: CMakeLists.txt  README.md
native/include/: pymixef_core.h
native/src/: core.cpp
native/tests/: test_core.cpp
r/pymixef/: DESCRIPTION  NAMESPACE  README.md
r/pymixef/R/: pymixef.R
r/pymixef/man/: pymixef-package.Rd  pymixef_fit.Rd  pymixef_load.Rd  pymixef_model.Rd
r/pymixef/tests/: testthat.R
r/pymixef/tests/testthat/: helper-python.R  test-python-parity.R  test-wrapper-api.R
scripts/: audit_documentation.py  check_release_tag.py  extract_notebook_figures.py  validate_notebooks.py
src/pymixef/: __init__.py  _contracts.py  _serialization.py  _version.py  capabilities.py  cli.py  compare.py  convergence.py  covariance.py  data.py  diagnostics.py  errors.py  families.py  formula.py  inference.py  ir.py  model.py  native.py  plugins.py  provenance.py  random.py  reporting.py  results.py  transforms.py  validation.py  warning_catalog.json  warnings.py
src/pymixef/backends/: __init__.py  base.py  glmm.py  lmm.py  mmrm.py
src/pymixef/interoperability/: __init__.py  base.py  nonmem.py  pharmml.py  r.py  sbml.py  sedml.py
src/pymixef/pharmacometrics/: __init__.py  dsl.py  estimation.py  events.py  ode.py  pk.py
src/pymixef/schemas/: model-ir-v1.json
tests/: __init__.py  test_authoring_ir.py  test_backend_conformance.py  test_cli.py  test_compare_reporting.py  test_data_covariance.py  test_events.py  test_families.py  test_formula.py  test_glmm_mmrm.py  test_interoperability.py  test_ir.py  test_lmm.py  test_model.py  test_ode_pk.py  test_optimizer_selection.py  test_packaging.py  test_pharmacometrics_dsl.py  test_provenance.py  test_random_inference.py  test_release_consistency.py  test_results.py  test_sensitivity_workflows.py  test_validation.py
validation/: README.md
