[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymixef"
version = "0.1.1"
description = "Python-native mixed-effects statistics and pharmacometrics"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{name = "PyMixEF contributors"}]
keywords = [
  "mixed-effects",
  "longitudinal",
  "pharmacometrics",
  "population-pk",
  "statistics",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
]

[project.urls]
Homepage = "https://github.com/kkusima/PyMixEF"
Documentation = "https://pymixef.readthedocs.io/en/latest/"
Repository = "https://github.com/kkusima/PyMixEF"
Issues = "https://github.com/kkusima/PyMixEF/issues"
Changelog = "https://github.com/kkusima/PyMixEF/blob/main/CHANGELOG.md"

[project.optional-dependencies]
data = [
  "pandas>=2.0",
  "polars>=1.0",
  "pyarrow>=14",
  "xarray>=2023.1",
]
plot = ["matplotlib>=3.8"]
notebooks = [
  "ipykernel>=6.29",
  "jupyterlab>=4.2",
  "matplotlib>=3.8",
  "nbclient>=0.10",
  "nbformat>=5.10",
]
report = [
  "markdown>=3.6",
  "python-docx>=1.1",
  "reportlab>=4.0",
]
docs = [
  "Sphinx>=8.2,<9",
  "myst-parser>=4,<5",
  "pydata-sphinx-theme>=0.16,<0.21",
  "sphinx-codeautolink>=0.18,<0.19",
  "sphinx-copybutton>=0.5,<0.6",
  "sphinx-design>=0.6,<0.7",
]
validation = ["pandas>=2.0", "statsmodels>=0.14"]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pandas>=2.0",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "twine>=5.1",
]

[project.scripts]
pymixef = "pymixef.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pymixef = ["py.typed", "schemas/*.json", "warning_catalog.json"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["pymixef"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "RUF005"]

[tool.mypy]
strict = true
warn_unreachable = true
ignore_missing_imports = true
follow_imports = "silent"
files = [
  "src/pymixef/__init__.py",
  "src/pymixef/_contracts.py",
  "src/pymixef/_version.py",
  "src/pymixef/capabilities.py",
  "src/pymixef/cli.py",
  "src/pymixef/compare.py",
  "src/pymixef/convergence.py",
  "src/pymixef/data.py",
  "src/pymixef/diagnostics.py",
  "src/pymixef/errors.py",
  "src/pymixef/formula.py",
  "src/pymixef/inference.py",
  "src/pymixef/interoperability",
  "src/pymixef/ir.py",
  "src/pymixef/pharmacometrics/__init__.py",
  "src/pymixef/plugins.py",
  "src/pymixef/random.py",
  "src/pymixef/reporting.py",
  "src/pymixef/validation.py",
  "src/pymixef/warnings.py",
]
